--- a/index.html
+++ b/index.html
@@ -35,7 +35,31 @@
         </nav>
       </header>
 
-      <main>
-      </main>
+
+
+
+
+      <footer>
+        <div class="cont footer">
+            <div class="left">
+                <h4>Boolando s.r.l.</h4>
+                <ul>
+                    <li><a href="">Informazioni legali</a></li>
+                    <li><a href="">Informazioni sulla privacy</a></li>
+                    <li><a href="">Diritti di recesso</a></li>
+                </ul>
+            </div>
+            <div class="right">
+                <h5>Trovaci anche su</h5>
+                <ul class="icon">
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Pinterest</a></li>
+                    <li><a href="">Youtube</a></li>
+                </ul>
+            </div>
+        </div>
+      </footer>
 </body>
 </html>
